# jarvis

./: Cargo.toml  Procfile
fixtures/: ringsdb.json
src/: discord.rs  lib.rs  lotr.rs  main.rs  marvel_champions.rs
