[package]
name = "jarvis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
strsim = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
serde_json = "1.0"
tokio-test = "*"

